--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,6 +2,12 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
+
+.site-logo img {
+  max-height: 4rem;
+}
+
+
 @charset "utf-8";
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
